add auto tools and intent context management

--- a/examples/auth-demo-advanced.html
+++ b/examples/auth-demo-advanced.html
@@ -1867,6 +1867,12 @@
           processChunks: true
         };
 
+        // Auto-tools mode: pass previous intent context for sticky tool selection
+        if (lastIntentContext) {
+          chatOptions.intentContext = lastIntentContext;
+          log('Passing intent context from previous turn');
+        }
+
         // Add model if selected
         if (settings.model) {
           chatOptions.model = settings.model;
@@ -1908,9 +1914,15 @@
           }
         }
 
-        // NEW: Access the aggregated ProcessedResponse after streaming
+        // Access the aggregated ProcessedResponse after streaming
         const processedResponse = await stream.response;
         log('ProcessedResponse: ' + JSON.stringify(processedResponse, null, 2));
+
+        // Capture intent context for auto-tools mode (sticky tool selection)
+        if (processedResponse.intentContext?.intentContext) {
+          lastIntentContext = processedResponse.intentContext.intentContext;
+          log('Captured intent context: ' + lastIntentContext.activeIntent);
+        }
 
         if (!fullContent) {
           messages[messages.length - 1].content = '(No response)';
